@@ -3032,35 +3032,43 @@ for f in $CPARTS genclisph modules $EXTRA_CPARTS ; do
     dependsc=$dependsc' modules.h'
   fi
   flags2=$flags
-  if [ $f = eval -a "$cpu" = ia64 -a $XCC_GCC = true ] ; then
-    # gcc-2.96 on Linux/ia64 miscompiles eval.d when -O is used.
-    flags2=$flags2' -O0'
-  fi
-  if [ $f = eval -a "$cpu" = sparc -a $XCC_GCC = true ] ; then
-    # gcc-7.2.0 on Linux/sparc appears to miscompile eval.d when -O2 is used.
-    flags2=$flags2' -O1'
-  fi
-  if [ $f = eval -a "$cpu" = sparc64 -a $XCC_GCC = true ] ; then
-    # gcc-4.6.3 on Linux/sparc64 miscompiles eval.d when -O is used.
-    flags2=$flags2' -O0'
-  fi
-  if [ "$cpu" = mips -a -n "$USE_WIDE_SOFT" -a $XCC_GCC = true ] ; then
-    # gcc-4.9.2 on Linux/mips (o32 ABI) miscompiles spvw.o, eval.o,
-    # control.o, list.o and others when -DWIDE and -O is used.
-    flags2=$flags2' -O0'
-  fi
-  if [ "$cpu" = i386 -a -n "$USE_WIDE_SOFT" -a $XCC_GCC = true ] ; then
-    # gcc-6.3.0 on Hurd/i386 miscompiles something when -DWIDE is in use
-    # and -O2 is used on all of spvw.o eval.o control.o encoding.o stream.o io.o
-    # array.o hashtabl.o list.o record.o sequence.o charstrg.o predtype.o symbol.o.
-    # The effect is a crash in loadmem_from_handle.
-    # Also, clang 3.8.0 on FreeBSD/i386 miscompiles stream.o when -DWIDE is in
-    # use and -O2.
-    flags2=$flags2' -O1'
-  fi
-  if [ $f = lisparit -a "$cpu" = s390x -a $XCC_GCC = true ] ; then
-    # gcc-4.9.2 on Linux/s390x miscompiles lisparit.d when -O2 is used.
-    flags2=$flags2' -O1'
+  # Reduce optimizations in special cases.
+  if [ $XCC_GCC = true ] ; then
+    case " $XCFLAGS " in
+      *" -O0 "*) ;;
+      *)
+        if [ $f = eval -a "$cpu" = ia64 ] ; then
+          # gcc-2.96 on Linux/ia64 miscompiles eval.d when -O is used.
+          flags2=$flags2' -O0'
+        fi
+        if [ $f = eval -a "$cpu" = sparc ] ; then
+          # gcc-7.2.0 on Linux/sparc appears to miscompile eval.d when -O2 is used.
+          flags2=$flags2' -O1'
+        fi
+        if [ $f = eval -a "$cpu" = sparc64 ] ; then
+          # gcc-4.6.3 on Linux/sparc64 miscompiles eval.d when -O is used.
+          flags2=$flags2' -O0'
+        fi
+        if [ "$cpu" = mips -a -n "$USE_WIDE_SOFT" ] ; then
+          # gcc-4.9.2 on Linux/mips (o32 ABI) miscompiles spvw.o, eval.o,
+          # control.o, list.o and others when -DWIDE and -O is used.
+          flags2=$flags2' -O0'
+        fi
+        if [ "$cpu" = i386 -a -n "$USE_WIDE_SOFT" ] ; then
+          # gcc-6.3.0 on Hurd/i386 miscompiles something when -DWIDE is in use
+          # and -O2 is used on all of spvw.o eval.o control.o encoding.o stream.o io.o
+          # array.o hashtabl.o list.o record.o sequence.o charstrg.o predtype.o symbol.o.
+          # The effect is a crash in loadmem_from_handle.
+          # Also, clang 3.8.0 on FreeBSD/i386 miscompiles stream.o when -DWIDE is in
+          # use and -O2.
+          flags2=$flags2' -O1'
+        fi
+        if [ $f = lisparit -a "$cpu" = s390x ] ; then
+          # gcc-4.9.2 on Linux/s390x miscompiles lisparit.d when -O2 is used.
+          flags2=$flags2' -O1'
+        fi
+        ;;
+    esac
   fi
   if [ $f = eval -a "${with_jitc}" = lightning ]; then
     flags2=$flags2' -Wno-unused' # should be gone - eventually...
